# crewai-news-full

./: .env_sample  .gitignore  README.md  authors.csv  cl_run.py  pyproject.toml  requirements.txt  research_data.yaml
src/news/: crew.py  main.py  search_serper.py
src/news/config/: authors_agents.yaml  authors_tasks.yaml  btc-agents.yaml  btc-tasks.yaml  default_agents.yaml  default_tasks.yaml  summerize_paper_agents.yaml  summerize_paper_tasks.yaml
src/news/lib/: exa_search_tool.py  serper_search.py  setserver.py  tracing.py  utils.py
src/news/tests/: bug.py  sapi_search_tool.py  search_sap.py
uploads/: short.txt
utils/: test_exa.py  test_serper.py
